# Synthetic_Arbitrage_Detectio_Engine

./: CMakeLists.txt  PLAN.md  README.md  build.sh  vcpkg.json
config/: engine_config.json
docs/: phase1_completion_summary.md  phase1_documentation.md
include/: config_manager.hpp  logger.hpp  performance_monitor.hpp  types.hpp
src/: main.cpp
src/core/: config_manager.cpp
src/utils/: logger.cpp  performance_monitor.cpp
tests/: CMakeLists.txt  test_core.cpp
